Fixed scroll button alignment and more

--- a/Andy06/Style_Sheet/Home.css
+++ b/Andy06/Style_Sheet/Home.css
@@ -1,11 +1,8 @@
 ﻿body, html , p{
     height: 100%;
     margin: 0;
-    font-size: 16px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-    font-weight: 400;
     line-height: 1.8em;
-    /*color:#808080;*/
 }
 /*Main header with action links*/
 nav {
@@ -53,7 +50,7 @@ nav {
 /*Main Picture text*/
 .ptext {
     position: absolute;
-    top: 30%;
+    top: 25%;
     font-weight:600;
     width: 100%;
     text-align: center;
@@ -66,14 +63,12 @@ nav {
 .Mheader {
     position: absolute;
     font-weight:500;
-    top: 35%;
+    top: 30%;
     width: 100%;
     text-align: center;
-    color: black;
     font-size: 30px;
     letter-spacing: 8px;
     text-transform: uppercase;
-    color: black;
 }
 /*Home Picture*/
 .pimg1 {
@@ -95,7 +90,6 @@ nav {
 .section-dark {
     height: auto;
     background-color: #282e34;
-    /*width:50%;*/
     direction: unset;
     text-align: justify;
     padding: 20px 80px;
@@ -105,7 +99,6 @@ nav {
 /*Qualifications and memberships*/
 .section-light2 {
     height:auto;
-    text-align: justify;
     max-width: 1800px;
     padding: 40px 80px;
 }
@@ -163,12 +156,9 @@ nav {
 
 /*text scroll*/
 .demo a {
-    position: absolute;
     bottom: 20px;
     z-index: 2;
     display: inline-block;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
     color: #fff;
     font: normal 400 20px/1 'Josefin Sans', sans-serif;
     letter-spacing: .1em;
@@ -177,9 +167,8 @@ nav {
     margin: 0;
     position: absolute;
     top: 50%;
-    left: 50%;
-   
-    transform: translate(-40%, 70%);
+    left:50%;
+    transform: translate(-50%, 70%);
 }
 
     .demo a:hover {
@@ -196,7 +185,7 @@ nav {
         position: absolute;
         top: 0;
         left: 50%;
-
+        right:50%;
         width: 46px;
         height: 46px;
         margin-left: -23px;
@@ -209,7 +198,7 @@ nav {
             position: absolute;
             top: 50%;
             left: 50%;
-            
+            right: 50%;
             content: '';
             width: 16px;
             height: 16px;
@@ -219,7 +208,6 @@ nav {
             -webkit-transform: rotate(-45deg);
             transform: rotate(-45deg);
             box-sizing: border-box;
-            
         }
 
         #section03 a span::before {
@@ -288,7 +276,11 @@ nav {
         font-size: 20px;
     }
 
+    body, html, p {
+        
+        margin: 0;
 
+    }
 }
 @media only screen and (max-width: 1295px) {
     
